# Multi-Threaded-Rainbow-Table-Server-for-Password-Recovery

./: Cargo.toml  README.md  cracked_output.txt  hashes.txt  passwords.txt  rainbow_table.txt
Performance_report/crack_hashes MD5/base/: benchmark.json  raw.csv
Performance_report/crack_hashes MD5/change/: estimates.json
Performance_report/crack_hashes MD5/new/: estimates.json  sample.json  tukey.json
Performance_report/crack_hashes MD5/report/: index.html
Performance_report/crack_hashes SHA256/base/: raw.csv  sample.json  tukey.json
Performance_report/crack_hashes SHA256/change/: estimates.json
Performance_report/crack_hashes SHA256/new/: benchmark.json  estimates.json
Performance_report/crack_hashes SHA256/report/: index.html
Performance_report/crack_hashes/base/: estimates.json  raw.csv  tukey.json
Performance_report/crack_hashes/change/: estimates.json
Performance_report/crack_hashes/new/: benchmark.json  sample.json
Performance_report/crack_hashes/report/: index.html
Performance_report/generate_passwords 1000 passwords/base/: estimates.json  raw.csv  sample.json  tukey.json
Performance_report/generate_passwords 1000 passwords/new/: benchmark.json
Performance_report/generate_passwords 1000 passwords/report/: index.html
Performance_report/generate_passwords/base/: benchmark.json  estimates.json  sample.json
Performance_report/generate_passwords/new/: raw.csv  tukey.json
Performance_report/report/: index.html
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
(+47 files in other folders)
