[package]
name = "hashassin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.0"
hashassin-core = { path = "../core" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
tokio = { version = "1.19.0", features = ["full"] }
async-std = "1.11.0"
hex = "0.4.3"