[package]
name = "hashassin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
digest = "0.10.7"
md-5 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0"
tracing = "0.1"
num-bigint = { version = "0.4.3", features = ["rand", "std"] }
num-traits = "0.2.15"
hex = "0.4.3"
tracing-subscriber = "0.3.9"
tokio = { version = "1.19.0", features = ["full"] }
async-std = "1.11.0"
async-channel = "1.7.1"
